@@ -65,25 +65,11 @@ version is also installed.
 
     ENV.delete 'GEM_PATH' if options[:install_dir].nil? and RUBY_VERSION > '1.9'
 
-    install_options = {
-      :bin_dir             => options[:bin_dir],
-      :development         => options[:development],
-      :domain              => options[:domain],
-      :env_shebang         => options[:env_shebang],
-      :force               => options[:force],
-      :format_executable   => options[:format_executable],
-      :ignore_dependencies => options[:ignore_dependencies],
-      :install_dir         => options[:install_dir],
-      :prerelease          => options[:prerelease],
-      :security_policy     => options[:security_policy],
-      :wrappers            => options[:wrappers],
-    }
-
     exit_code = 0
 
     get_all_gem_names.each do |gem_name|
       begin
-        inst = Gem::DependencyInstaller.new install_options
+        inst = Gem::DependencyInstaller.new options
         inst.install gem_name, options[:version]
 
         inst.installed_gems.each do |spec|
